@@ -1,3 +1,8 @@
+2010-02-11	Olivier Bilodeau <obilodeau@inverse.ca>
+	* pf/lib/pf/vlan.pm, pf/sbin/pfsetvlan: Avoided duplicated code, 
+	renamed vlan.pm's custom_getNodeInfo to getNodeUpdatedInfo and modified
+	it.
+
 2010-02-10	Olivier Bilodeau <obilodeau@inverse.ca>
 	* pf/conf/templates/httpd.conf.apache22,
 	pf/conf/templates/httpd.conf.pre_apache22: Fixed an apache rewrite rule
